--- a/themes/private/css/default.css
+++ b/themes/private/css/default.css
@@ -90,8 +90,8 @@
     color: #fff;
 }
 .footer {
-    color: #828282;
-    background-color: #2c2b29;
+    color: #383838;
+    background-color: #ffe202;
     margin-top: 50px;
 }
 .footer a {
@@ -104,8 +104,15 @@
 .footer .list-group {
     margin-top: 15px;
 }
+.footer .footer_image{
+    width: 200px;
+}
+.footer_image img{
+    width: 100%;
+}
 .footer .list-group-item {
-    background-color: #2c2b29;
+    background-color: #ffe202;
+    color: #383838;
     border: none;
 }
 .footer .form-control {
